objects/CMPL123CME__Complaint_Code__c.object
<CustomObject>
    <description>Code Name</description>
    <fields>
        <fullName>BMX_Competent_Authority__c</fullName>
        <label>Competent Authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Is_Meddev__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked for Meddev Countries</description>
        <label>Is Meddev ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Description__c</fullName>
        <description>Description about code</description>
        <inlineHelpText>Description about code</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activates or deactivates this complaint code.</description>
        <inlineHelpText>Activates or deactivates this complaint code.</inlineHelpText>
        <label>Complaint Code Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Medra_Code_Detail__c</fullName>
        <externalId>true</externalId>
        <label>MedDRA External Id</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123CME__Name_With_Code__c</fullName>
        <formula>Name &amp; " - "&amp; CMPL123CME__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name With Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__ParentCCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Complaint Code</description>
        <inlineHelpText>Parent Complaint Code</inlineHelpText>
        <label>Parent Code (Lookup)</label>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Complaint Codes</relationshipLabel>
        <relationshipName>Complaint_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Parent_Active__c</fullName>
        <description>Parent Complaint code active status (if any)</description>
        <formula>IF(ISBLANK(CMPL123CME__ParentCCode__c), false, NOT(CMPL123CME__ParentCCode__r.CMPL123CME__Inactive__c))</formula>
        <inlineHelpText>Parent Complaint code active status (if any)</inlineHelpText>
        <label>Parent Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Parent_CCode__c</fullName>
        <label>Parent Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Secondary_Code__c</fullName>
        <label>Secondary Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Sub_Type__c</fullName>
        <label>Sub Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SYMPTOM CODE</fullName>
                </value>
                <value>
                    <fullName>ANALYSIS CODE</fullName>
                </value>
                <value>
                    <fullName>PATIENT CODE</fullName>
                </value>
                <value>
                    <fullName>DEVICE CODE</fullName>
                </value>
                <value>
                    <fullName>EVAL METHOD CODE</fullName>
                </value>
                <value>
                    <fullName>EVAL RESULT CODE</fullName>
                </value>
                <value>
                    <fullName>EVAL CONCLUSION CODE</fullName>
                </value>
                <value>
                    <fullName>COMPLAINT CODE</fullName>
                </value>
                <value>
                    <fullName>ROOT CAUSE CODE</fullName>
                </value>
                <value>
                    <fullName>FINDING CODE</fullName>
                </value>
                <value>
                    <fullName>MEDDRA CODE</fullName>
                </value>
                <value>
                    <fullName>COMPONENT CODE</fullName>
                </value>
                <value>
                    <fullName>COUNTRY CODE</fullName>
                </value>
                <value>
                    <fullName>STATE CODE</fullName>
                </value>
                <value>
                    <fullName>PRO CODE</fullName>
                </value>
                <value>
                    <fullName>HEALTH EFFECT - CLINICAL CODE</fullName>
                </value>
                <value>
                    <fullName>HEALTH EFFECT - IMPACT CODE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Version__c</fullName>
        <description>Version</description>
        <inlineHelpText>Version</inlineHelpText>
        <label>Version</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Subsidiary_Text__c</fullName>
        <label>Local Subsidiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Complaint Code</label>
    <listViews>
        <fullName>CMPL123CME__ANALYSIS_CODE</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>ANALYSIS CODE</value>
        </filters>
        <label>ANALYSIS CODES</label>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__All</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__COMPLAINT_CODE</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <columns>CMPL123CME__ParentCCode__c</columns>
        <columns>CMPL123CME__Parent_CCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>COMPLAINT CODE</value>
        </filters>
        <label>COMPLAINT CODES</label>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__COMPONENT_CODES</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>COMPONENT CODE</value>
        </filters>
        <label>COMPONENT CODE</label>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__COUNTRY_CODES</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>BMX_Competent_Authority__c</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>BMX_Is_Meddev__c</columns>
        <columns>Local_Subsidiary_Text__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>COUNTRY CODE</value>
        </filters>
        <label>COUNTRY CODES</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__DEVICE_CODE</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>DEVICE CODE</value>
        </filters>
        <label>DEVICE CODES</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__EVAL_CONCLUSION_CODE</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>EVAL CONCLUSION CODE</value>
        </filters>
        <label>EVAL CONCLUSION CODES</label>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__EVAL_METHOD_CODE</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>EVAL METHOD CODE</value>
        </filters>
        <label>EVAL METHOD CODES</label>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__EVAL_RESULT_CODE</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>EVAL RESULT CODE</value>
        </filters>
        <label>EVAL RESULT CODES</label>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__FINDING_CODES</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>FINDING CODE</value>
        </filters>
        <label>FINDING CODES</label>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__HEALTH_EFFECT_CLINICAL_CODES</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>HEALTH EFFECT - CLINICAL CODE</value>
        </filters>
        <label>HEALTH EFFECT - CLINICAL CODES</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__HEALTH_EFFECT_IMPACT_CODES</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>HEALTH EFFECT - IMPACT CODE</value>
        </filters>
        <label>HEALTH EFFECT - IMPACT CODES</label>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__MEDDRA_CODES</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Sub_Type__c</columns>
        <columns>CMPL123CME__Version__c</columns>
        <columns>CMPL123CME__ParentCCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>MEDDRA CODE</value>
        </filters>
        <label>MEDDRA CODES</label>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__PATIENT_CODE</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__ParentCCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>PATIENT CODE</value>
        </filters>
        <label>PATIENT CODES</label>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__ROOT_CAUSE_CODES</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <columns>CMPL123CME__Secondary_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>ROOT CAUSE CODE</value>
        </filters>
        <label>ROOT CAUSE CODES</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complaint Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>